WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221268
Promote debug assertion to release assertion in cookiesForURL()
https://bugs.webkit.org/show_bug.cgi?id=221268
Summary
Promote debug assertion to release assertion in cookiesForURL()
Chris Dumez
Reported
2021-02-02 09:39:48 PST
Promote debug assertion to release assertion in cookiesForURL(). We have a weird/rare crash in this area and I want to rule out that this is not what is happening.
Attachments
Patch
(1.63 KB, patch)
2021-02-02 09:40 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-02-02 09:40:45 PST
Created
attachment 419013
[details]
Patch
EWS
Comment 2
2021-02-02 10:14:05 PST
Committed
r272218
: <
https://trac.webkit.org/changeset/272218
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419013
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-02 10:15:42 PST
<
rdar://problem/73885852
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug