Promote debug assertion to release assertion in cookiesForURL() https://bugs.webkit.org/show_bug.cgi?id=221268

Reviewed by Alex Christensen.

Promote debug assertion to release assertion in cookiesForURL(). We have a weird/rare crash in this
area and I want to rule out that this is not what is happening.

* platform/network/cocoa/NetworkStorageSessionCocoa.mm:
(WebCore::cookiesForURL):


Canonical link: https://commits.webkit.org/233594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272218 268f45cc-cd09-0410-ab3c-d52691b4dbfc